<resources>
    <string name="app_name">Nuglif Test</string>
    <string name="action_sort">Trier</string>
    <string name="action_filter">Filtrer</string>
    <string name="sort_by_date">Date de publication</string>
    <string name="sort_by_channel">Catégories</string>
    <string name="yourPosition">Votre position: %1$s / %2$s </string>
    <string name="error_locationNotSupported">Erreur, votre emplacement n&#8217;est pas supportée</string>

    <string name="preference_filter_title">Catégories principales</string>
    <string name="filter_preference_home">Acceuil</string>

    <string name="fragment_feed_title">Acceuil</string>
    <string name="fragment_article_details">Details</string>
    <string name="fragment_channel_preference">Préférences</string>
</resources>